fixed masses and xsections

--- a/notebooks/SmodelS/getResults-Copy.ipynb
+++ b/notebooks/SmodelS/getResults-Copy.ipynb
@@ -10,13 +10,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-18T20:35:11.966069Z",
+     "start_time": "2023-10-18T20:35:11.696322Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2881/1716768401.py:5: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
+      "/tmp/ipykernel_106179/72230128.py:5: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
       "  import glob,imp,os,sys\n"
      ]
     }
@@ -29,7 +34,7 @@
     "import glob,imp,os,sys\n",
     "from pandas import json_normalize\n",
     "import pyslha\n",
-    "sys.path.append('/home/yoxara/smodels')\n",
+    "sys.path.append('/home/camila/smodels')\n",
     "from smodels.share.models.mssm import BSMList\n",
     "from smodels.share.models.SMparticles import SMList\n",
     "from smodels.base.model import Model\n",
@@ -41,7 +46,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-18T20:35:12.609627Z",
+     "start_time": "2023-10-18T20:35:12.569851Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -52,45 +62,60 @@
     }
    ],
    "source": [
-    "BSMlist = getParticlesFromSLHA('/home/yoxara/2MDM/2mdm_slha_files_all/run_01_zp_3612_dm_1412_gqv_06.slha')\n",
+    "BSMlist = getParticlesFromSLHA('../../slha_files_extra/run_01_zp_3612_dm_1412_gqv_06.slha')\n",
     "model = Model(BSMparticles=BSMlist, SMparticles=SMList)\n",
     "print(BSMlist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-18T20:58:40.581837Z",
+     "start_time": "2023-10-18T20:58:40.578768Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "slhaFolder = '/home/yoxara/2MDM/2mdm_slha_files_all'\n",
-    "smodelsFolder = '/home/yoxara/2MDM/notebooks/SmodelS/2mdm_all_results/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO in databaseObj.loadBinaryFile() in 526: loading binary db file /home/yoxara/smodels/smodels-database/db3.pcl format version 214\n",
-      "INFO in databaseObj.loadBinaryFile() in 533: Loaded database from /home/yoxara/smodels/smodels-database/db3.pcl in 13.0 secs.\n",
-      "INFO in modelTester.loadDatabaseResults() in 498: Including non-validated results\n",
-      "INFO in modelTester.testPoints() in 358: Running SModelS for 1870 files with a single process. Messages will be redirected to smodels.log\n"
-     ]
-    }
-   ],
-   "source": [
-    "!runSModelS.py -p /home/yoxara/2MDM/notebooks/SmodelS/parameters_2mdm.ini -f /home/yoxara/2MDM/2mdm_slha_files_all -o /home/yoxara/2MDM/notebooks/SmodelS/2mdm_all_results/"
+    "slhaFolder = '../../slha_files/'\n",
+    "smodelsFolder = '../../data/2mdm_results/'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-18T20:45:55.043716Z",
+     "start_time": "2023-10-18T20:35:45.826335Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO in databaseObj.loadBinaryFile() in 526: loading binary db file /home/camila/smodels-database/db3.pcl format version 214\n",
+      "INFO in databaseObj.loadBinaryFile() in 533: Loaded database from /home/camila/smodels-database/db3.pcl in 2.0 secs.\n",
+      "INFO in modelTester.loadDatabaseResults() in 498: Including non-validated results\n",
+      "INFO in modelTester.testPoints() in 358: Running SModelS for 1000 files with a single process. Messages will be redirected to smodels.log\n"
+     ]
+    }
+   ],
+   "source": [
+    "!/home/camila/smodels/runSModelS.py -p /home/camila/smodels/parameters_2mdm.ini -f /home/camila/2MDM/slha_files_extra/ -o /home/camila/2MDM/data/2mdm_results_extra/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-18T20:58:53.258737Z",
+     "start_time": "2023-10-18T20:58:50.874047Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#Convert Experimental Results list to a dictionary\n",
@@ -124,14 +149,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-18T20:58:53.864719Z",
+     "start_time": "2023-10-18T20:58:53.854823Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3740\n"
+      "870\n"
      ]
     }
    ],
@@ -141,8 +171,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-18T20:58:56.613871Z",
+     "start_time": "2023-10-18T20:58:56.070774Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#Convert data to flat DataFrame:\n",
@@ -151,8 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 41,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-18T21:22:38.399986Z",
+     "start_time": "2023-10-18T21:22:34.077346Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#Get SLHA data:\n",
@@ -161,8 +201,9 @@
     "    slhaFile = os.path.join(slhaFolder,f)\n",
     "    slha = pyslha.readSLHAFile(slhaFile)\n",
     "    massDict = dict([[str(key),abs(val)] for key,val in slha.blocks['MASS'].items() if key >= 9000006])\n",
-    "    extparDict = dict([[str(key),val] for key,val in slha.blocks['FRBLOCK'].items()])\n",
-    "    extparDict.update(dict([[str(key),val] for key,val in slha.blocks['BLINPUTS'].items()]))\n",
+    "    extparDict = dict([[str(key),val] for key,val in slha.blocks['ZPRIME'].items()])\n",
+    "    extparDict.update(dict([[str(key+len(extparDict)),val] for key,val in slha.blocks['BLINPUTS'].items()]))\n",
+    "    \n",
     "    widthDict = dict([[str(key),val.totalwidth] for key,val in slha.decays.items() if key >= 9000006])\n",
     "    BRsDict = {}\n",
     "    for pdg,val in slha.decays.items():\n",
@@ -187,8 +228,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-18T20:59:12.579021Z",
+     "start_time": "2023-10-18T20:59:12.531549Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#Convert to DataFrame\n",
@@ -202,8 +248,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-18T20:59:13.012027Z",
+     "start_time": "2023-10-18T20:59:12.941588Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#Merge with SModelS DataFrame\n",
@@ -212,14 +263,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-18T20:59:13.205745Z",
+     "start_time": "2023-10-18T20:59:13.197559Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final number of data points: 7480\n"
+      "Final number of data points: 870\n"
      ]
     }
    ],
@@ -231,101 +287,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 39,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-18T20:59:18.466367Z",
+     "start_time": "2023-10-18T20:59:18.372058Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#Save DataFrame to pickle file:\n",
-    "dataDF.to_pickle('/home/yoxara/2MDM/notebooks/SmodelS/2MDM_scanResults_all.pcl')"
+    "dataDF.to_pickle('../../data/2mdm_results/results.pcl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 40,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-18T20:59:19.373322Z",
+     "start_time": "2023-10-18T20:59:19.369447Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7480\n"
+      "870\n"
      ]
     }
    ],
    "source": [
     "print(len(dataDF))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Database version: 3.0.0-beta\n",
-      "-----------------------------\n",
-      "206 experimental results: 93 CMS, 113 ATLAS, 77 @ 8 TeV, 129 @ 13 TeV\n",
-      "1322 datasets, 7269 txnames.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from smodels.experiment.databaseObj import Database\n",
-    "path = \"/home/yoxara/smodels/smodels-database\" # Path to database\n",
-    "db = Database(path) # Load database and model\n",
-    "#analysis_list = ['all']%['CMS-PAS-EXO-20-008', 'ATLAS-EXOT-2018-48', 'ATLAS-EXOT-2019-03', 'CMS-EXO-19-012','CMS-EXO-20-004-eff']\n",
-    "#db.selectExpResults(analysisIDs=analysis_list, txnames='all')#, useNonValidated=True)#, dataTypes='upperLimit'\n",
-    "print(db)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Database version: 3.0.0-beta\n",
-      "-----------------------------\n",
-      "1 experimental results: 0 CMS, 1 ATLAS, 0 @ 8 TeV, 1 @ 13 TeV\n",
-      "1 datasets, 2 txnames.\n",
-      " [<smodels.experiment.expResultObj.ExpResult object at 0x7f7093572080>]\n",
-      "Database version: 3.0.0-beta\n",
-      "-----------------------------\n",
-      "1 experimental results: 1 CMS, 0 ATLAS, 0 @ 8 TeV, 1 @ 13 TeV\n",
-      "1 datasets, 1 txnames.\n",
-      " [<smodels.experiment.expResultObj.ExpResult object at 0x7f7093572050>]\n",
-      "Database version: 3.0.0-beta\n",
-      "-----------------------------\n",
-      "1 experimental results: 0 CMS, 1 ATLAS, 0 @ 8 TeV, 1 @ 13 TeV\n",
-      "1 datasets, 1 txnames.\n",
-      " [<smodels.experiment.expResultObj.ExpResult object at 0x7f7093571f30>]\n",
-      "Database version: 3.0.0-beta\n",
-      "-----------------------------\n",
-      "1 experimental results: 0 CMS, 1 ATLAS, 0 @ 8 TeV, 1 @ 13 TeV\n",
-      "1 datasets, 2 txnames.\n",
-      " [<smodels.experiment.expResultObj.ExpResult object at 0x7f7093572050>]\n",
-      "Database version: 3.0.0-beta\n",
-      "-----------------------------\n",
-      "2 experimental results: 2 CMS, 0 ATLAS, 0 @ 8 TeV, 2 @ 13 TeV\n",
-      "23 datasets, 46 txnames.\n",
-      " [<smodels.experiment.expResultObj.ExpResult object at 0x7f7093573fa0>, <smodels.experiment.expResultObj.ExpResult object at 0x7f7093571ae0>]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(db, db.getExpResults('ATLAS-EXOT-2019-03'))\n",
-    "print(db, db.getExpResults('CMS-PAS-EXO-20-008'))\n",
-    "print(db, db.getExpResults('ATLAS-EXOT-2018-48'))\n",
-    "print(db, db.getExpResults('ATLAS-EXOT-2019-03'))\n",
-    "print(db, db.getExpResults('CMS-SUS-20-004'))\n",
-    "\n"
    ]
   },
   {
