--- a/notebooks/SmodelS/getResults.ipynb
+++ b/notebooks/SmodelS/getResults.ipynb
@@ -16,7 +16,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2881/1716768401.py:5: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
+      "/tmp/ipykernel_149743/1716768401.py:5: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
       "  import glob,imp,os,sys\n"
      ]
     }
@@ -52,7 +52,7 @@
     }
    ],
    "source": [
-    "BSMlist = getParticlesFromSLHA('/home/yoxara/2MDM/2mdm_slha_files_all/run_01_zp_3612_dm_1412_gqv_06.slha')\n",
+    "BSMlist = getParticlesFromSLHA('/home/yoxara/2MDM/2mdm_slha_files_extra/run_01_zp_3612_dm_1412_gqv_06.slha')\n",
     "model = Model(BSMparticles=BSMlist, SMparticles=SMList)\n",
     "print(BSMlist)"
    ]
@@ -63,8 +63,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "slhaFolder = '/home/yoxara/2MDM/2mdm_slha_files_all'\n",
-    "smodelsFolder = '/home/yoxara/2MDM/notebooks/SmodelS/2mdm_all_results/'"
+    "slhaFolder = '/home/yoxara/2MDM/2mdm_slha_files_extra'\n",
+    "smodelsFolder = '/home/yoxara/2MDM/notebooks/SmodelS/2mdm_results_extra/'"
    ]
   },
   {
@@ -77,14 +77,14 @@
      "output_type": "stream",
      "text": [
       "INFO in databaseObj.loadBinaryFile() in 526: loading binary db file /home/yoxara/smodels/smodels-database/db3.pcl format version 214\n",
-      "INFO in databaseObj.loadBinaryFile() in 533: Loaded database from /home/yoxara/smodels/smodels-database/db3.pcl in 13.0 secs.\n",
+      "INFO in databaseObj.loadBinaryFile() in 533: Loaded database from /home/yoxara/smodels/smodels-database/db3.pcl in 2.7 secs.\n",
       "INFO in modelTester.loadDatabaseResults() in 498: Including non-validated results\n",
-      "INFO in modelTester.testPoints() in 358: Running SModelS for 1870 files with a single process. Messages will be redirected to smodels.log\n"
+      "INFO in modelTester.testPoints() in 358: Running SModelS for 1000 files with a single process. Messages will be redirected to smodels.log\n"
      ]
     }
    ],
    "source": [
-    "!runSModelS.py -p /home/yoxara/2MDM/notebooks/SmodelS/parameters_2mdm.ini -f /home/yoxara/2MDM/2mdm_slha_files_all -o /home/yoxara/2MDM/notebooks/SmodelS/2mdm_all_results/"
+    "!runSModelS.py -p /home/yoxara/2MDM/notebooks/SmodelS/parameters_2mdm.ini -f /home/yoxara/2MDM/2mdm_slha_files_extra -o /home/yoxara/2MDM/notebooks/SmodelS/2mdm_results_extra/"
    ]
   },
   {
@@ -131,7 +131,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3740\n"
+      "1000\n"
      ]
     }
    ],
@@ -162,6 +162,7 @@
     "    slha = pyslha.readSLHAFile(slhaFile)\n",
     "    massDict = dict([[str(key),abs(val)] for key,val in slha.blocks['MASS'].items() if key >= 9000006])\n",
     "    extparDict = dict([[str(key),val] for key,val in slha.blocks['FRBLOCK'].items()])\n",
+    "    extparDict = dict([[str(key),val] for key,val in slha.blocks['ZPRIME'].items()])\n",
     "    extparDict.update(dict([[str(key),val] for key,val in slha.blocks['BLINPUTS'].items()]))\n",
     "    widthDict = dict([[str(key),val.totalwidth] for key,val in slha.decays.items() if key >= 9000006])\n",
     "    BRsDict = {}\n",
@@ -219,7 +220,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final number of data points: 7480\n"
+      "Final number of data points: 1000\n"
      ]
     }
    ],
@@ -236,7 +237,7 @@
    "outputs": [],
    "source": [
     "#Save DataFrame to pickle file:\n",
-    "dataDF.to_pickle('/home/yoxara/2MDM/notebooks/SmodelS/2MDM_scanResults_all.pcl')"
+    "dataDF.to_pickle('/home/yoxara/2MDM/notebooks/SmodelS/2MDM_scanResults_extra.pcl')"
    ]
   },
   {
@@ -248,7 +249,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7480\n"
+      "1000\n"
      ]
     }
    ],
@@ -258,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -295,27 +296,27 @@
       "-----------------------------\n",
       "1 experimental results: 0 CMS, 1 ATLAS, 0 @ 8 TeV, 1 @ 13 TeV\n",
       "1 datasets, 2 txnames.\n",
-      " [<smodels.experiment.expResultObj.ExpResult object at 0x7f7093572080>]\n",
+      " [<smodels.experiment.expResultObj.ExpResult object at 0x7ff339306890>]\n",
       "Database version: 3.0.0-beta\n",
       "-----------------------------\n",
       "1 experimental results: 1 CMS, 0 ATLAS, 0 @ 8 TeV, 1 @ 13 TeV\n",
       "1 datasets, 1 txnames.\n",
-      " [<smodels.experiment.expResultObj.ExpResult object at 0x7f7093572050>]\n",
+      " [<smodels.experiment.expResultObj.ExpResult object at 0x7ff370dd1cc0>]\n",
       "Database version: 3.0.0-beta\n",
       "-----------------------------\n",
       "1 experimental results: 0 CMS, 1 ATLAS, 0 @ 8 TeV, 1 @ 13 TeV\n",
       "1 datasets, 1 txnames.\n",
-      " [<smodels.experiment.expResultObj.ExpResult object at 0x7f7093571f30>]\n",
+      " [<smodels.experiment.expResultObj.ExpResult object at 0x7ff370dd2770>]\n",
       "Database version: 3.0.0-beta\n",
       "-----------------------------\n",
       "1 experimental results: 0 CMS, 1 ATLAS, 0 @ 8 TeV, 1 @ 13 TeV\n",
       "1 datasets, 2 txnames.\n",
-      " [<smodels.experiment.expResultObj.ExpResult object at 0x7f7093572050>]\n",
+      " [<smodels.experiment.expResultObj.ExpResult object at 0x7ff370dd30d0>]\n",
       "Database version: 3.0.0-beta\n",
       "-----------------------------\n",
       "2 experimental results: 2 CMS, 0 ATLAS, 0 @ 8 TeV, 2 @ 13 TeV\n",
       "23 datasets, 46 txnames.\n",
-      " [<smodels.experiment.expResultObj.ExpResult object at 0x7f7093573fa0>, <smodels.experiment.expResultObj.ExpResult object at 0x7f7093571ae0>]\n"
+      " [<smodels.experiment.expResultObj.ExpResult object at 0x7ff370dd2770>, <smodels.experiment.expResultObj.ExpResult object at 0x7ff370dd2800>]\n"
      ]
     }
    ],
