--- a/notebooks/SmodelS/getResults-Copy1.ipynb
+++ b/notebooks/SmodelS/getResults-Copy1.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T20:35:11.966069Z",
-     "start_time": "2023-10-18T20:35:11.696322Z"
+     "end_time": "2023-10-24T00:42:16.116027Z",
+     "start_time": "2023-10-24T00:42:15.739452Z"
     }
    },
    "outputs": [
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_106179/72230128.py:5: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
+      "/tmp/ipykernel_399358/72230128.py:5: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
       "  import glob,imp,os,sys\n"
      ]
     }
@@ -48,8 +48,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T20:35:12.609627Z",
-     "start_time": "2023-10-18T20:35:12.569851Z"
+     "end_time": "2023-10-24T00:42:17.288844Z",
+     "start_time": "2023-10-24T00:42:17.251768Z"
     }
    },
    "outputs": [
@@ -69,26 +69,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T20:58:40.581837Z",
-     "start_time": "2023-10-18T20:58:40.578768Z"
+     "end_time": "2023-10-24T00:42:21.996983Z",
+     "start_time": "2023-10-24T00:42:21.994512Z"
     }
    },
    "outputs": [],
    "source": [
     "slhaFolder = '../../slha_files/'\n",
-    "smodelsFolder = '../../data/2mdm_results/'"
+    "smodelsFolder = '../../data/2mdm_results_nobb/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T20:45:55.043716Z",
-     "start_time": "2023-10-18T20:35:45.826335Z"
+     "start_time": "2023-10-24T00:42:23.106Z"
     }
    },
    "outputs": [
@@ -97,23 +96,22 @@
      "output_type": "stream",
      "text": [
       "INFO in databaseObj.loadBinaryFile() in 526: loading binary db file /home/camila/smodels-database/db3.pcl format version 214\n",
-      "INFO in databaseObj.loadBinaryFile() in 533: Loaded database from /home/camila/smodels-database/db3.pcl in 2.0 secs.\n",
+      "INFO in databaseObj.loadBinaryFile() in 533: Loaded database from /home/camila/smodels-database/db3.pcl in 39.2 secs.\n",
       "INFO in modelTester.loadDatabaseResults() in 498: Including non-validated results\n",
-      "INFO in modelTester.testPoints() in 358: Running SModelS for 1000 files with a single process. Messages will be redirected to smodels.log\n"
+      "INFO in modelTester.testPoints() in 358: Running SModelS for 957 files with a single process. Messages will be redirected to smodels.log\n"
      ]
     }
    ],
    "source": [
-    "!/home/camila/smodels/runSModelS.py -p /home/camila/smodels/parameters_2mdm.ini -f /home/camila/2MDM/slha_files_extra/ -o /home/camila/2MDM/data/2mdm_results_extra/"
+    "!/home/camila/smodels/runSModelS.py -p /home/camila/smodels/parameters_2mdm.ini -f /home/camila/2MDM/slha_files/ -o /home/camila/2MDM/data/2mdm_results_nobb/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T20:58:53.258737Z",
-     "start_time": "2023-10-18T20:58:50.874047Z"
+     "start_time": "2023-10-24T01:05:30.845Z"
     }
    },
    "outputs": [],
@@ -149,33 +147,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T20:58:53.864719Z",
-     "start_time": "2023-10-18T20:58:53.854823Z"
+     "start_time": "2023-10-24T01:05:31.228Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "870\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T20:58:56.613871Z",
-     "start_time": "2023-10-18T20:58:56.070774Z"
+     "start_time": "2023-10-24T01:05:31.543Z"
     }
    },
    "outputs": [],
@@ -186,11 +174,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T21:22:38.399986Z",
-     "start_time": "2023-10-18T21:22:34.077346Z"
+     "start_time": "2023-10-24T01:05:31.865Z"
     }
    },
    "outputs": [],
@@ -228,11 +215,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T20:59:12.579021Z",
-     "start_time": "2023-10-18T20:59:12.531549Z"
+     "start_time": "2023-10-24T01:05:32.629Z"
     }
    },
    "outputs": [],
@@ -248,11 +234,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T20:59:13.012027Z",
-     "start_time": "2023-10-18T20:59:12.941588Z"
+     "start_time": "2023-10-24T01:05:32.952Z"
     }
    },
    "outputs": [],
@@ -263,22 +248,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T20:59:13.205745Z",
-     "start_time": "2023-10-18T20:59:13.197559Z"
+     "start_time": "2023-10-24T01:05:33.317Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Final number of data points: 870\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "print('Final number of data points:',dataDF.shape[0])\n",
@@ -287,37 +263,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T20:59:18.466367Z",
-     "start_time": "2023-10-18T20:59:18.372058Z"
+     "start_time": "2023-10-24T01:05:33.766Z"
     }
    },
    "outputs": [],
    "source": [
     "#Save DataFrame to pickle file:\n",
-    "dataDF.to_pickle('../../data/2mdm_results/results.pcl')"
+    "dataDF.to_pickle('../../data/2mdm_results_nobb/results.pcl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T20:59:19.373322Z",
-     "start_time": "2023-10-18T20:59:19.369447Z"
+     "start_time": "2023-10-24T01:05:35.783Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "870\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(dataDF))"
    ]
